@@ -1,0 +1,3 @@
+system = get_var('hostname')
+
+add_roles(system, 'test')
