@@ -1,0 +1,1 @@
+add_files('/etc/test')
