@@ -10,6 +10,7 @@
 
 TOP=`dirname $0`
 ORG=`pwd`
+OPT=
 
 run_adminkit()
 {
@@ -20,12 +21,13 @@ run_adminkit()
     else
 	DRIVER=adminkit
     fi
-    fakeroot ../../$DRIVER -d -R $PWD/ -D $PWD/dest/ adminkit.conf
+    fakeroot ../../$DRIVER $OPT -R $PWD/ -D $PWD/dest/ adminkit.conf
     assertEquals "error running adminkit for $1" $? 0
 }
 
 clean_result()
 {
+    OPT=
     rm -rf $PWD/dest/*
     rm -rf $PWD/vars $PWD/top/vars $PWD/once
     cd $ORG
@@ -82,7 +84,7 @@ testFilename()
 {
     run_adminkit test6
     assertEquals 'error processing global directive' $? 0
-    [ -f $PWD/dest/etc-`hostname -d`/test.`hostname` ]
+    [ -d $PWD/dest/etc-`hostname -d` ]
     assertEquals 'file not created with the right name' $? 0
     clean_result
 }
@@ -98,6 +100,19 @@ testVars()
 {
     run_adminkit test8
     assertEquals 'error processing add_to_list directive' $? 0
+    clean_result
+}
+
+testFuture()
+{
+    OPT=-f
+    mkdir -p $TOP/test9/dest/etc/
+    rm -f $TOP/test9/dest/etc/test
+    touch $TOP/test9/vars
+    touch -t 202201010000 $TOP/test9/dest/etc/test
+    run_adminkit test9
+    cmp $PWD/dest/etc/test $PWD/files/etc/test
+    assertEquals 'error forcing copy from the future' $? 0
     clean_result
 }
 
